fix metadata alignment

--- a/ckanext/justicehub_theme/public/dataset.css
+++ b/ckanext/justicehub_theme/public/dataset.css
@@ -93,7 +93,7 @@ h1+.dataset-meta {
 
 /* -------------------------- metadata ----------------------- */
 .metadata-list {
-    margin-left: 15px;
+    margin: 30px 15px;
 }
 .metadata-list.dl-horizontal dt {
     display: inline;
